pike final releases for cycle-with-milestones projects
Change-Id: If0036bc7b600dbbda59151e00235fed07fa3fbff
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/pike/barbican.yaml
+++ b/deliverables/pike/barbican.yaml
@@ -21,6 +21,11 @@ releases:
       - hash: e6c4f8cd7363f6662c30b276140fb2b8c9132326
         repo: openstack/barbican
     version: 5.0.0.0rc1
+  - diff_start: 4.0.0
+    projects:
+      - hash: e6c4f8cd7363f6662c30b276140fb2b8c9132326
+        repo: openstack/barbican
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
