--- a/deliverables/pike/neutron-lbaas-dashboard.yaml
+++ b/deliverables/pike/neutron-lbaas-dashboard.yaml
@@ -31,6 +31,11 @@ releases:
       - hash: af2e607338fb904f562b3c7ef3d2643d2f7526ba
         repo: openstack/neutron-lbaas-dashboard
     version: 3.0.0.0rc1
+  - diff_start: 2.0.0
+    projects:
+      - hash: af2e607338fb904f562b3c7ef3d2643d2f7526ba
+        repo: openstack/neutron-lbaas-dashboard
+    version: 3.0.0
 branches:
   - location: 3.0.0.0rc1
     name: stable/pike
