--- a/deliverables/pike/senlin.yaml
+++ b/deliverables/pike/senlin.yaml
@@ -20,6 +20,11 @@ releases:
     projects:
       - repo: openstack/senlin
         hash: 59c6ea6617f1199d26d6e00ef431c3e5e42a7089
+  - diff_start: 3.0.0.0rc1
+    projects:
+      - repo: openstack/senlin
+        hash: 59c6ea6617f1199d26d6e00ef431c3e5e42a7089
+    version: 4.0.0
 branches:
   - location: 4.0.0.0rc1
     name: stable/pike
