--- a/deliverables/pike/trove-dashboard.yaml
+++ b/deliverables/pike/trove-dashboard.yaml
@@ -23,3 +23,8 @@ releases:
     projects:
       - repo: openstack/trove-dashboard
         hash: 387c3358555ee539f7abbbf4875497497e12c265
+  - diff_start: 8.0.0.0rc1
+    projects:
+      - repo: openstack/trove-dashboard
+        hash: 387c3358555ee539f7abbbf4875497497e12c265
+    version: 9.0.0
