--- a/deliverables/pike/zaqar.yaml
+++ b/deliverables/pike/zaqar.yaml
@@ -21,6 +21,11 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: a5338d3af5b36973f218670438356ac8287dda6d
+  - diff_start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/zaqar
+        hash: a5338d3af5b36973f218670438356ac8287dda6d
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
