--- a/deliverables/pike/congress-dashboard.yaml
+++ b/deliverables/pike/congress-dashboard.yaml
@@ -16,9 +16,14 @@ releases:
       - hash: acc972d6563fb2b0a41cfa52f85088cbd9a23783
         repo: openstack/congress-dashboard
     version: 1.0.0.0rc1
-    highlights:
-      - First release of Congress Horizon-plugin separate from Congress.
-      - New monitoring panel that summarizes and visualizes policy violations.
+    highlights: |
+      - 'First release of Congress Horizon-plugin separate from Congress.'
+      - 'New monitoring panel that summarizes and visualizes policy violations.'
+  - diff_start: null
+    projects:
+      - hash: acc972d6563fb2b0a41cfa52f85088cbd9a23783
+        repo: openstack/congress-dashboard
+    version: 1.0.0
 branches:
   - location: 1.0.0.0rc1
     name: stable/pike
