--- a/deliverables/pike/congress.yaml
+++ b/deliverables/pike/congress.yaml
@@ -24,6 +24,11 @@ releases:
       - 'New library of useful, importable policies greatly reduces barrier to use.'
       - 'Congress Horizon-plugin separated into congress-dashboard project, with improved
         usability and helpful new features such as a policy monitoring panel.'
+  - diff_start: 5.0.0.0rc1
+    projects:
+      - hash: 4a9566adf6c1bb19981aee6973f5f677be5a9d7b
+        repo: openstack/congress
+    version: 6.0.0
 branches:
   - location: 6.0.0.0rc1
     name: stable/pike
