--- a/deliverables/pike/freezer-web-ui.yaml
+++ b/deliverables/pike/freezer-web-ui.yaml
@@ -20,6 +20,11 @@ releases:
     projects:
       - repo: openstack/freezer-web-ui
         hash: 9ed92d49745190863f16ae032efbe454abac7749
+  - diff_start: 4.0.0
+    projects:
+      - repo: openstack/freezer-web-ui
+        hash: 9ed92d49745190863f16ae032efbe454abac7749
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
