--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -28,6 +28,11 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
+  - diff_start: 11.0.0.0rc1
+    projects:
+      - repo: openstack/horizon
+        hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
+    version: 12.0.0
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
