--- a/deliverables/pike/manila.yaml
+++ b/deliverables/pike/manila.yaml
@@ -20,6 +20,11 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 80fe5f1fe4eb2f9d63c36fbfed3dcc388e4a931b
+  - diff_start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/manila
+        hash: 80fe5f1fe4eb2f9d63c36fbfed3dcc388e4a931b
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
