--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -26,6 +26,11 @@ releases:
       - hash: c77eb09fe571fbb8941d9be38e7cdd4831ff2820
         repo: openstack/networking-sfc
     version: 5.0.0.0rc2
+  - diff_start: 4.0.0
+    projects:
+      - hash: c77eb09fe571fbb8941d9be38e7cdd4831ff2820
+        repo: openstack/networking-sfc
+    version: 5.0.0
 branches:
   - location: 5.0.0.0rc1
     name: stable/pike
