--- a/deliverables/pike/neutron-dynamic-routing.yaml
+++ b/deliverables/pike/neutron-dynamic-routing.yaml
@@ -25,6 +25,11 @@ releases:
       - hash: 9098d4447581117e857d2f86fb4a0508b5ffbb6a
         repo: openstack/neutron-dynamic-routing
     version: 11.0.0.0rc2
+  - diff_start: 10.0.0
+    projects:
+      - hash: 9098d4447581117e857d2f86fb4a0508b5ffbb6a
+        repo: openstack/neutron-dynamic-routing
+    version: 11.0.0
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
