--- a/deliverables/pike/neutron-lbaas.yaml
+++ b/deliverables/pike/neutron-lbaas.yaml
@@ -20,6 +20,11 @@ releases:
       - hash: 6d68e016c3c6116332bbba9ab072bb6dc8dc5f7f
         repo: openstack/neutron-lbaas
     version: 11.0.0.0rc1
+  - diff_start: 10.0.0
+    projects:
+      - hash: 6d68e016c3c6116332bbba9ab072bb6dc8dc5f7f
+        repo: openstack/neutron-lbaas
+    version: 11.0.0
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
