--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -57,4 +57,15 @@ releases:
         hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
       - repo: openstack/sahara-image-elements
         hash: 79369e39e40e1d9ba1cbca6039a3a06afbaf1685
+  - diff_start: 6.0.0
+    projects:
+      - repo: openstack/sahara
+        hash: 30a3b8b58867a176b502ad0e5601533655d7336b
+      - repo: openstack/sahara-dashboard
+        hash: 7394ec618343bc997e097958ac897b1a33d3cb1c
+      - repo: openstack/sahara-extra
+        hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
+      - repo: openstack/sahara-image-elements
+        hash: 79369e39e40e1d9ba1cbca6039a3a06afbaf1685
+    version: 7.0.0
 release-notes: https://docs.openstack.org/releasenotes/sahara/pike.html
