--- a/deliverables/pike/searchlight-ui.yaml
+++ b/deliverables/pike/searchlight-ui.yaml
@@ -24,3 +24,8 @@ releases:
     projects:
       - repo: openstack/searchlight-ui
         hash: d52e632bf73e4e781599cf10f8ea136c90a35726
+  - diff_start: 2.0.0.0rc1
+    projects:
+      - repo: openstack/searchlight-ui
+        hash: d52e632bf73e4e781599cf10f8ea136c90a35726
+    version: 3.0.0
