--- a/deliverables/pike/zaqar-ui.yaml
+++ b/deliverables/pike/zaqar-ui.yaml
@@ -21,6 +21,11 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 07c9e898211274defc9c139fd54c2f8313635141
+  - diff_start: 2.0.0
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: 07c9e898211274defc9c139fd54c2f8313635141
+    version: 3.0.0
 branches:
   - location: 3.0.0.0rc1
     name: stable/pike
