--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -24,6 +24,10 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: d8277a49cbec34eb1c6ae68e8c0f838c8c6f9ea0
+  - version: 12.0.0.0rc3
+    projects:
+      - repo: openstack/horizon
+        hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
 branches:
   - location: 12.0.0.0rc1
     name: stable/pike
