Fix the Pike release for Octavia projects
Due to a mistake, the Pike release for the octavia projects was missing
some patches merged to stable/pike.  This release sets these projects up
for pike properly.

Change-Id: I71e91f1fd20c7ecce6f45a3b646f47c5b818c086

--- a/deliverables/pike/neutron-lbaas-dashboard.yaml
+++ b/deliverables/pike/neutron-lbaas-dashboard.yaml
@@ -36,6 +36,11 @@ releases:
       - hash: af2e607338fb904f562b3c7ef3d2643d2f7526ba
         repo: openstack/neutron-lbaas-dashboard
     version: 3.0.0
+  - projects:
+      - hash: 55cd42f5d863664eb588626120296444c9f6fb44
+        repo: openstack/neutron-lbaas-dashboard
+    version: 3.0.1
+    diff-start: 2.0.0
 branches:
   - location: 3.0.0.0rc1
     name: stable/pike
