--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 3471ff7ba99bec5310a44e9363eafd4709d89026
         repo: openstack/os-net-config
     version: 5.2.0
+  - projects:
+      - hash: 60e32735b115b0d6ba7511db8dd3b44e2795a641
+        repo: openstack/os-net-config
+    version: 5.2.1
 team: tripleo
 type: other
