--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -49,5 +49,9 @@ releases:
       - hash: bd97ed555aea17072289bfa22fc3bee6d5e412c4
         repo: openstack/puppet-tripleo
     version: 5.6.1
+  - projects:
+      - hash: 1035f332e72d8351bc8f733de1ab741bc9b54974
+        repo: openstack/puppet-tripleo
+    version: 5.6.2
 team: tripleo
 type: other
