--- a/deliverables/newton/python-tripleoclient.yaml
+++ b/deliverables/newton/python-tripleoclient.yaml
@@ -41,5 +41,9 @@ releases:
       - hash: cfa87167c454a83f04dbb797163aeeb47502c8ee
         repo: openstack/python-tripleoclient
     version: 5.4.2
+  - projects:
+      - hash: 19cb0ffb784f4644331caa319652b1822f6e2399
+        repo: openstack/python-tripleoclient
+    version: 5.4.3
 team: tripleo
 type: library
