--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -41,5 +41,9 @@ releases:
       - hash: 570c5acc9e7bebeaa489821b6bb21568fb005575
         repo: openstack/tripleo-common
     version: 5.4.2
+  - projects:
+      - hash: de872dd3dec645b853d86f0a8e6751efd1ae3b0d
+        repo: openstack/tripleo-common
+    version: 5.4.3
 team: tripleo
 type: library
