--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: b0e4970a7c7bd0a8e908abe7071d700968f8a3ff
         repo: openstack/tripleo-heat-templates
     version: 5.3.0
+  - projects:
+      - hash: a33d7dde36e7a419cd1aef9ddb72b05bdbc77f98
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.1
 team: tripleo
 type: other
