--- a/deliverables/newton/tripleo-puppet-elements.yaml
+++ b/deliverables/newton/tripleo-puppet-elements.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: ea5c909e15a708bc84db6b1f2b41d67fd1d26c77
         repo: openstack/tripleo-puppet-elements
     version: 5.3.0
+  - projects:
+      - hash: e1dc548084b38a55466c3120da83aae2a5d6e2c5
+        repo: openstack/tripleo-puppet-elements
+    version: 5.3.1
 team: tripleo
 type: other
