--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: b3a7d23bfe5ad393400ac9a96ae66a628bdd43a7
         repo: openstack/instack-undercloud
     version: 5.3.0
+  - projects:
+      - hash: e9a5137e7e4c0f88c9cb44e60d311a7604470652
+        repo: openstack/instack-undercloud
+    version: 5.3.1
 team: tripleo
 type: other
