--- a/deliverables/newton/tripleo-image-elements.yaml
+++ b/deliverables/newton/tripleo-image-elements.yaml
@@ -42,5 +42,9 @@ releases:
       - hash: 3ecf4779585af7c4c63d841f66a8159ddfa1d645
         repo: openstack/tripleo-image-elements
     version: 5.3.0
+  - projects:
+      - hash: cb8335c9b17d222071f59b2b1e5aa2dcbb9804d4
+        repo: openstack/tripleo-image-elements
+    version: 5.3.1
 team: tripleo
 type: other
