--- a/deliverables/pike/tempest.yaml
+++ b/deliverables/pike/tempest.yaml
@@ -13,3 +13,7 @@ releases:
     projects:
       - repo: openstack/tempest
         hash: 19e20abb9311dc3c786d32418966185085af6a3e
+  - version: 17.0.0
+    projects:
+      - repo: openstack/tempest
+        hash: ad75393a990e0bd6cfa694d554b43136216db03b
