Create driverfixes/ocata branch for Cinder
As we move to the next phase of support for Ocata
it is time to create the driverfixes branch based
on Cinder 10.0.6 .

Change-Id: I9685f68cfa37bd7e26b7408f513bdcc8a9b49888

--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -7,6 +7,9 @@ release-model: cycle-with-milestones
 branches:
   - name: stable/ocata
     location: 10.0.0.0rc1
+  - name: driverfixes/ocata
+    location:
+      openstack/cinder: 486c00794b1401077bd0c9a6071135c149382958
 releases:
   - version: 10.0.0.0b1
     projects:
