TripleO Ocata release
Depends-On: Iad0226ac47333d0c499401b6fc54ead6cff36829
Depends-On: Ic425f22a582734d1202f20be2b715d067833271d
Change-Id: I3455def262613809c604f116db079d8a36f4623c

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 6790ae8b3d17e6a7aea2a7bf854763486d30c2a1
         repo: openstack/instack-undercloud
     version: 6.1.0
+  - projects:
+      - hash: 02d25849aaa5fec977346c785b0ed594fd55321d
+        repo: openstack/instack-undercloud
+    version: 6.1.1
 team: tripleo
 type: other
