--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -26,5 +26,9 @@ releases:
       - hash: 9e3d128985ad9053e6df779f001ca8979a9bbf90
         repo: openstack/os-net-config
     version: 6.1.0
+  - projects:
+      - hash: 914635c2a0e61e8de6a7baf5560522bd654ed301
+        repo: openstack/os-net-config
+    version: 6.1.1
 team: tripleo
 type: other
