--- a/deliverables/ocata/os-refresh-config.yaml
+++ b/deliverables/ocata/os-refresh-config.yaml
@@ -26,5 +26,9 @@ releases:
       - hash: 5d68491b0571e53350310667fcfab6a67553c7b7
         repo: openstack/os-refresh-config
     version: 6.1.0
+  - projects:
+      - hash: 41eabb33ed5bec4bccc7df2396d6edf66f50b765
+        repo: openstack/os-refresh-config
+    version: 6.1.1
 team: tripleo
 type: other
