--- a/deliverables/ocata/python-tripleoclient.yaml
+++ b/deliverables/ocata/python-tripleoclient.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: 69dfe0a5ddb32c61d59e609fbda41cbd18c39147
         repo: openstack/python-tripleoclient
     version: 6.2.0
+  - projects:
+      - hash: 8dbebd4e79c04878abf432d90285d3ba1fcc44e6
+        repo: openstack/python-tripleoclient
+    version: 6.2.1
 team: tripleo
 type: library
