--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: f2a78d4b03fe29defc02783f6aab213f848c3c2e
         repo: openstack/tripleo-common
     version: 6.1.0
+  - projects:
+      - hash: 6a939cb99414609940d4076223faa77537c09e4a
+        repo: openstack/tripleo-common
+    version: 6.1.1
 team: tripleo
 type: other
