--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 1520a180ad0328905092653473a49dee619aaac8
         repo: openstack/tripleo-puppet-elements
     version: 6.2.0
+  - projects:
+      - hash: 8582a2941804cdc7a89c0c12e0b16a4638b167aa
+        repo: openstack/tripleo-puppet-elements
+    version: 6.2.1
 team: tripleo
 type: other
