--- a/deliverables/ocata/tripleo-ui.yaml
+++ b/deliverables/ocata/tripleo-ui.yaml
@@ -26,5 +26,9 @@ releases:
       - hash: 7372bbfb868dd904b3541668d13706abf0aee544
         repo: openstack/tripleo-ui
     version: 3.2.0
+  - projects:
+      - hash: 10dcc3654c0cef769e7dfa671cd3bee8a7ae8ee6
+        repo: openstack/tripleo-ui
+    version: 3.2.1
 team: tripleo
 type: other
