--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -25,5 +25,9 @@ releases:
       - hash: bb22b760da9ceb5b54a802ee84370fdd260f5680
         repo: openstack/tripleo-validations
     version: 5.6.0
+  - projects:
+      - hash: 0a2641ada05d796aaa98e9246153764e0937a451
+        repo: openstack/tripleo-validations
+    version: 5.6.1
 team: tripleo
 type: other
