--- a/deliverables/pike/patrole.yaml
+++ b/deliverables/pike/patrole.yaml
@@ -8,3 +8,7 @@ releases:
     projects:
       - repo: openstack/patrole
         hash: 13ff694f76c0f528552e0b6d1b70cb12e370e26d
+  - version: 0.2.0
+    projects:
+      - repo: openstack/patrole
+        hash: 45fffa50e0020d4a34b1c3eac4b553522bf5fb35
