Update schema.yaml to catch more typos
The Pike release script had a typo that caused the release emails to
have incorrect diff output.
This patch causes the validate test to catch more typos for releases
and branches.  It also fixes the typos in the existing deliverables
files so they will pass future validation.

Change-Id: If173ba0b3d8c427f0bf5f3e4972dd0848459c951

--- a/deliverables/pike/congress-dashboard.yaml
+++ b/deliverables/pike/congress-dashboard.yaml
@@ -19,8 +19,7 @@ releases:
     highlights: |
       - 'First release of Congress Horizon-plugin separate from Congress.'
       - 'New monitoring panel that summarizes and visualizes policy violations.'
-  - diff_start: null
-    projects:
+  - projects:
       - hash: acc972d6563fb2b0a41cfa52f85088cbd9a23783
         repo: openstack/congress-dashboard
     version: 1.0.0
