--- a/deliverables/pike/designate-dashboard.yaml
+++ b/deliverables/pike/designate-dashboard.yaml
@@ -16,7 +16,7 @@ releases:
     projects:
       - repo: openstack/designate-dashboard
         hash: 8169c4b876e05f0675a1d942b17d7d83b9f9e7d2
-  - diff_start: 4.0.0.0rc1
+  - diff-start: 4.0.0.0rc1
     projects:
       - repo: openstack/designate-dashboard
         hash: 8169c4b876e05f0675a1d942b17d7d83b9f9e7d2
