--- a/deliverables/pike/designate.yaml
+++ b/deliverables/pike/designate.yaml
@@ -18,7 +18,7 @@ releases:
     projects:
       - repo: openstack/designate
         hash: edc0684ace513d2ae73f06941e0898d1e963f298
-  - diff_start: 4.0.0
+  - diff-start: 4.0.0
     projects:
       - repo: openstack/designate
         hash: edc0684ace513d2ae73f06941e0898d1e963f298
