--- a/deliverables/pike/freezer-web-ui.yaml
+++ b/deliverables/pike/freezer-web-ui.yaml
@@ -20,7 +20,7 @@ releases:
     projects:
       - repo: openstack/freezer-web-ui
         hash: 9ed92d49745190863f16ae032efbe454abac7749
-  - diff_start: 4.0.0
+  - diff-start: 4.0.0
     projects:
       - repo: openstack/freezer-web-ui
         hash: 9ed92d49745190863f16ae032efbe454abac7749
