--- a/deliverables/pike/freezer.yaml
+++ b/deliverables/pike/freezer.yaml
@@ -36,7 +36,7 @@ releases:
         hash: 4200c9aa5c1fe448c4d77a2ccce03246919f6cf8
       - repo: openstack/freezer-dr
         hash: 44e6f2be51db4edea96b77f3e622caee7f79e269
-  - diff_start: 4.0.0
+  - diff-start: 4.0.0
     projects:
       - repo: openstack/freezer
         hash: 4ccbc5b43794062060a980ef6909bf0f1006e0b4
