--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -28,7 +28,7 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 6b7b13250adbfaedca206be0ab59f730bd28a014
-  - diff_start: 8.0.0.0rc1
+  - diff-start: 8.0.0.0rc1
     projects:
       - repo: openstack/heat
         hash: 6b7b13250adbfaedca206be0ab59f730bd28a014
