--- a/deliverables/pike/horizon.yaml
+++ b/deliverables/pike/horizon.yaml
@@ -28,7 +28,7 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
-  - diff_start: 11.0.0.0rc1
+  - diff-start: 11.0.0.0rc1
     projects:
       - repo: openstack/horizon
         hash: 2fe66f444a35914009a275f7b8880ad12bc062d6
