--- a/deliverables/pike/keystone.yaml
+++ b/deliverables/pike/keystone.yaml
@@ -24,7 +24,7 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: e2d33c2819b1f52e7ee651d06d0ed50fd54fad15
-  - diff_start: 11.0.0
+  - diff-start: 11.0.0
     projects:
       - repo: openstack/keystone
         hash: e2d33c2819b1f52e7ee651d06d0ed50fd54fad15
