--- a/deliverables/pike/manila.yaml
+++ b/deliverables/pike/manila.yaml
@@ -20,7 +20,7 @@ releases:
     projects:
       - repo: openstack/manila
         hash: 80fe5f1fe4eb2f9d63c36fbfed3dcc388e4a931b
-  - diff_start: 4.0.0.0rc1
+  - diff-start: 4.0.0.0rc1
     projects:
       - repo: openstack/manila
         hash: 80fe5f1fe4eb2f9d63c36fbfed3dcc388e4a931b
