--- a/deliverables/pike/murano.yaml
+++ b/deliverables/pike/murano.yaml
@@ -24,7 +24,7 @@ releases:
     projects:
       - repo: openstack/murano
         hash: 94ba1def6032fce03b6cc8028dffc65eb383de1d
-  - diff_start: 3.2.0
+  - diff-start: 3.2.0
     projects:
       - repo: openstack/murano
         hash: 94ba1def6032fce03b6cc8028dffc65eb383de1d
