--- a/deliverables/pike/neutron.yaml
+++ b/deliverables/pike/neutron.yaml
@@ -29,7 +29,7 @@ releases:
       - hash: 5212c9c563e9470ce9e6abd76bdef22fa652a9b3
         repo: openstack/neutron
     version: 11.0.0.0rc3
-  - diff_start: 10.0.0.0rc1
+  - diff-start: 10.0.0.0rc1
     projects:
       - hash: 5212c9c563e9470ce9e6abd76bdef22fa652a9b3
         repo: openstack/neutron
