--- a/deliverables/pike/octavia.yaml
+++ b/deliverables/pike/octavia.yaml
@@ -43,7 +43,7 @@ releases:
       - hash: 2c8cc57156dfec5329aa2f8410f396308b5dea5e
         repo: openstack/octavia
     version: 1.0.0.0rc2
-  - diff_start: 0.10.0
+  - diff-start: 0.10.0
     projects:
       - hash: 2c8cc57156dfec5329aa2f8410f396308b5dea5e
         repo: openstack/octavia
