--- a/deliverables/pike/searchlight.yaml
+++ b/deliverables/pike/searchlight.yaml
@@ -23,7 +23,7 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: a1953b7f143f3bad0928b94c1370e292de93e601
-  - diff_start: 2.0.0.0rc1
+  - diff-start: 2.0.0.0rc1
     projects:
       - repo: openstack/searchlight
         hash: a1953b7f143f3bad0928b94c1370e292de93e601
