--- a/deliverables/pike/trove.yaml
+++ b/deliverables/pike/trove.yaml
@@ -23,7 +23,7 @@ releases:
     projects:
       - repo: openstack/trove
         hash: 0fb67d459baa0fb22391b1b1da3dba5349666bb7
-  - diff_start: 7.0.0.0rc1
+  - diff-start: 7.0.0.0rc1
     projects:
       - repo: openstack/trove
         hash: 0fb67d459baa0fb22391b1b1da3dba5349666bb7
