--- a/deliverables/pike/zaqar-ui.yaml
+++ b/deliverables/pike/zaqar-ui.yaml
@@ -21,7 +21,7 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: 07c9e898211274defc9c139fd54c2f8313635141
-  - diff_start: 2.0.0
+  - diff-start: 2.0.0
     projects:
       - repo: openstack/zaqar-ui
         hash: 07c9e898211274defc9c139fd54c2f8313635141
