--- a/deliverables/pike/zaqar.yaml
+++ b/deliverables/pike/zaqar.yaml
@@ -21,7 +21,7 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: a5338d3af5b36973f218670438356ac8287dda6d
-  - diff_start: 4.0.0.0rc1
+  - diff-start: 4.0.0.0rc1
     projects:
       - repo: openstack/zaqar
         hash: a5338d3af5b36973f218670438356ac8287dda6d
