--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -30,7 +30,7 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 982016670fe908e5d7026714b115e63b7c31b46b
-  - diff_start: 14.0.0
+  - diff-start: 14.0.0
     projects:
       - repo: openstack/glance
         hash: 982016670fe908e5d7026714b115e63b7c31b46b
