--- a/deliverables/pike/networking-ovn.yaml
+++ b/deliverables/pike/networking-ovn.yaml
@@ -22,7 +22,7 @@ releases:
       - hash: c350f88950ddbd510b823bdbc326e1726ea33fb5
         repo: openstack/networking-ovn
     version: 3.0.0.0rc2
-  - diff_start: 2.0.0
+  - diff-start: 2.0.0
     projects:
       - hash: c350f88950ddbd510b823bdbc326e1726ea33fb5
         repo: openstack/networking-ovn
