--- a/deliverables/pike/networking-sfc.yaml
+++ b/deliverables/pike/networking-sfc.yaml
@@ -26,7 +26,7 @@ releases:
       - hash: c77eb09fe571fbb8941d9be38e7cdd4831ff2820
         repo: openstack/networking-sfc
     version: 5.0.0.0rc2
-  - diff_start: 4.0.0
+  - diff-start: 4.0.0
     projects:
       - hash: c77eb09fe571fbb8941d9be38e7cdd4831ff2820
         repo: openstack/networking-sfc
