--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -28,7 +28,7 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 8b162ba21f06272f915070473640d493dd70beec
-  - diff_start: 15.0.0.0rc1
+  - diff-start: 15.0.0.0rc1
     projects:
       - repo: openstack/nova
         hash: 8b162ba21f06272f915070473640d493dd70beec
