--- a/deliverables/pike/sahara.yaml
+++ b/deliverables/pike/sahara.yaml
@@ -57,7 +57,7 @@ releases:
         hash: 557cf9fc7f6f08785eccb65c54b309a5f5113a83
       - repo: openstack/sahara-image-elements
         hash: 79369e39e40e1d9ba1cbca6039a3a06afbaf1685
-  - diff_start: 6.0.0
+  - diff-start: 6.0.0
     projects:
       - repo: openstack/sahara
         hash: 30a3b8b58867a176b502ad0e5601533655d7336b
