Add release 1.0.0 for hacking
There are a few fixes and new rules available in hacking, so it's
worth doing a release. Beginning of the cycle is a good time for
doing so.

Change-Id: I5ce26216867c5f2408173bf680bb10669a911ce7

--- a/deliverables/_independent/hacking.yaml
+++ b/deliverables/_independent/hacking.yaml
@@ -116,3 +116,7 @@ releases:
     projects:
       - repo: openstack-dev/hacking
         hash: d987e18e6978b07f562a01d4b4dc060b05f03a9d
+  - version: 1.0.0
+    projects:
+      - repo: openstack-dev/hacking
+        hash: d842b77cab8ea1ac76c006b7d99455c835475549
