--- a/deliverables/pike/karbor.yaml
+++ b/deliverables/pike/karbor.yaml
@@ -16,6 +16,11 @@ releases:
     projects:
       - repo: openstack/karbor
         hash: 2f6432ffd5fdf3549e06c72f1cc96e11877f2a60
+  - version: 0.5.1
+    projects:
+      - repo: openstack/karbor
+        hash: 78d1bed0429ebbfee86fb3422e43a65ae98c9fc9
+
 
 branches:
   - location: 0.5.0
