Add oslo releases for queens Sept 4, 2017
Change-Id: Ie7a6ecc7bdf561f72feeb675947eab07b84fb138

--- a/deliverables/queens/oslo.concurrency.yaml
+++ b/deliverables/queens/oslo.concurrency.yaml
@@ -4,3 +4,8 @@ launchpad: oslo.concurrency
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - version: 3.22.0
+    projects:
+      - repo: openstack/oslo.concurrency
+        hash: a7d35ccd812a48dcb7f84bba618da3b1a291beac
