--- a/deliverables/queens/osprofiler.yaml
+++ b/deliverables/queens/osprofiler.yaml
@@ -4,3 +4,8 @@ launchpad: osprofiler
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - version: 1.12.0
+    projects:
+      - repo: openstack/osprofiler
+        hash: de34c0d29e2a85396a9ff67dd022240043e1214e
