--- a/deliverables/queens/castellan.yaml
+++ b/deliverables/queens/castellan.yaml
@@ -3,3 +3,8 @@ launchpad: castellan
 team: oslo
 type: library
 release-model: cycle-with-intermediary
+releases:
+  - version: 0.13.0
+    projects:
+      - repo: openstack/castellan
+        hash: 6fe37f79a4eb40814ecde9a5b35cdc0d09a68665
