--- a/deliverables/queens/oslo.messaging.yaml
+++ b/deliverables/queens/oslo.messaging.yaml
@@ -4,3 +4,8 @@ launchpad: oslo.messaging
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - version: 5.31.0
+    projects:
+      - repo: openstack/oslo.messaging
+        hash: ba30a3067d7db81cc864ae9e52b2761df44efddd
