--- a/deliverables/queens/oslo.middleware.yaml
+++ b/deliverables/queens/oslo.middleware.yaml
@@ -4,3 +4,8 @@ launchpad: oslo.middleware
 release-model: cycle-with-intermediary
 team: oslo
 type: library
+releases:
+  - version: 3.31.0
+    projects:
+      - repo: openstack/oslo.middleware
+        hash: 8812bc3fc490f0db4977418eaedf58190a0df394
