--- a/deliverables/ocata/os-cloud-config.yaml
+++ b/deliverables/ocata/os-cloud-config.yaml
@@ -23,7 +23,7 @@ releases:
     projects:
       - repo: openstack/os-cloud-config
         hash: 8cbab5ceeeae52363ea8c5188b8a0604cc420e34
-    highlights: |
+    highlights: >
       - os-cloud-config is now deprecated, and we plan to remove this project
         in Pike.
   - version: 6.0.0
@@ -31,7 +31,3 @@ releases:
     projects:
       - repo: openstack/os-cloud-config
         hash: 8cbab5ceeeae52363ea8c5188b8a0604cc420e34
-  - projects:
-      - hash: 43242f902d5ce513f2cc6483391c6700272b5295
-        repo: openstack/os-cloud-config
-    version: 6.0.1
