--- a/deliverables/_independent/puppet-ceph.yaml
+++ b/deliverables/_independent/puppet-ceph.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 3cc04b6900d36b83d67b95a5190a77c14c2d3a02
         repo: openstack/puppet-ceph
     version: 2.4.0
+  - projects:
+      - hash: ebea4b703d002d64d0b623cc51d42890b187ab97
+        repo: openstack/puppet-ceph
+    version: 2.4.1
