--- a/deliverables/pike/zun.yaml
+++ b/deliverables/pike/zun.yaml
@@ -15,3 +15,7 @@ releases:
     projects:
       - repo: openstack/zun
         hash: ebfea16c70ef767310c9cf4d9f41ca4ebd814533
+  - version: 0.2.1
+    projects:
+      - repo: openstack/zun
+        hash: ee968441aa4ec31b8e7f34b35377124ade4933fe
