TripleO Pike RC2 release
Change-Id: I41caf38bb11344589b6d26a1ee97e2ece60eabcc

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -25,5 +25,9 @@ releases:
       - hash: 1d8ad41db9cba8f23ccba4a78f7a13405e57ef5d
         repo: openstack/instack-undercloud
     version: 7.3.0
+  - projects:
+      - hash: 72ce841253cf513ccc1f081efdddf76eb6bdf7c0
+        repo: openstack/instack-undercloud
+    version: 7.4.0
 team: tripleo
 type: other
