--- a/deliverables/pike/os-apply-config.yaml
+++ b/deliverables/pike/os-apply-config.yaml
@@ -17,5 +17,9 @@ releases:
       - hash: c2e15c8424de6ee260bc7266f813030d62246945
         repo: openstack/os-apply-config
     version: 7.1.0
+  - projects:
+      - hash: 1587707645de0fa45e29c0c16f8520175e82b940
+        repo: openstack/os-apply-config
+    version: 7.2.0
 team: tripleo
 type: other
