--- a/deliverables/pike/os-collect-config.yaml
+++ b/deliverables/pike/os-collect-config.yaml
@@ -17,5 +17,9 @@ releases:
       - hash: 5be5fe782f4e5802c4250f4a1f7fe3b6e4f9221a
         repo: openstack/os-collect-config
     version: 7.1.0
+  - projects:
+      - hash: ea5a49ceaf5f2d0923aaea4838aa20c84399ed76
+        repo: openstack/os-collect-config
+    version: 7.2.0
 team: tripleo
 type: other
