--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -21,5 +21,9 @@ releases:
       - hash: 69fca4aa70b12d8eed2428c27deb62c46d605770
         repo: openstack/os-net-config
     version: 7.2.0
+  - projects:
+      - hash: 77fe5922bd7ca5c2a199d383b03537c08edfcc1c
+        repo: openstack/os-net-config
+    version: 7.3.0
 team: tripleo
 type: other
