--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/puppet-tripleo
         hash: cf20c7c1ac3b36eaa6d638ffa8a619c20e8c3546
+  - projects:
+      - hash: b549c9837bbf3751f3c688ea34cbb52eb59fa443
+        repo: openstack/puppet-tripleo
+    version: 7.4.0
 team: tripleo
 type: other
