--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -33,5 +33,9 @@ releases:
     projects:
       - hash: 76f2b04ca75b76e315b3c88409e82d3ae0297d15
         repo: openstack/tripleo-common
+  - projects:
+      - hash: ec4ef24d9186a96d17594766cb95f83a50cf0ce8
+        repo: openstack/tripleo-common
+    version: 7.6.0
 team: tripleo
 type: other
