--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -21,5 +21,9 @@ releases:
       - hash: a7d1e89fc08d1e06857f255288c0a91056ff931b
         repo: openstack/tripleo-image-elements
     version: 7.0.0.0rc1
+  - projects:
+      - hash: 526772d36e92ee25f62077f056e7575aedcd9833
+        repo: openstack/tripleo-image-elements
+    version: 7.0.0.0rc2
 team: tripleo
 type: other
