--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/tripleo-puppet-elements
         hash: 23884d311fe285b295bd2caa889114d0a0dce1db
+  - projects:
+      - hash: 2094778336bffb245cb4250d5b5418c79cb7486a
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.0.0rc2
 team: tripleo
 type: other
