--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/tripleo-ui
         hash: 1158a37043ae5fb8a2f1083971981af6d529bde4
+  - projects:
+      - hash: 7a7c19b4b8c108b5a268421d7c114e027fe57732
+        repo: openstack/tripleo-ui
+    version: 7.4.0
 team: tripleo
 type: other
