--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/tripleo-validations
         hash: ddc025d4720e9d4fe276b6a82a91c08e4d3e5e46
+  - projects:
+      - hash: efe8a7251fc0737ea76faceef229a7ce934a8f60
+        repo: openstack/tripleo-validations
+    version: 7.4.0
 team: tripleo
 type: other
