--- a/deliverables/pike/os-refresh-config.yaml
+++ b/deliverables/pike/os-refresh-config.yaml
@@ -13,5 +13,9 @@ releases:
       - hash: f80ee22e8c3306ce5f4bb4220c870638cced33ae
         repo: openstack/os-refresh-config
     version: 7.0.0
+  - projects:
+      - hash: 4848c63cfed5236bf3450167e79cff723895d633
+        repo: openstack/os-refresh-config
+    version: 7.1.0
 team: tripleo
 type: other
