--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -21,5 +21,9 @@ releases:
     projects:
       - repo: openstack/tripleo-heat-templates
         hash: 98f578b7789cb4edef1090574ab7ab854f886fed
+  - projects:
+      - hash: 896517755b917a5018e6529100d2cda5487a35d9
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.0.0rc2
 team: tripleo
 type: other
