--- a/deliverables/newton/ceilometer.yaml
+++ b/deliverables/newton/ceilometer.yaml
@@ -57,3 +57,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: 327648f0d24c9f8326057175db6f1634389a1775
+  - projects:
+      - hash: a5e6a08aa7f7d058a179608b6f74462082507163
+        repo: openstack/ceilometer
+    version: 7.1.1
