--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -24,3 +24,7 @@ releases:
     projects:
       - repo: openstack/ceilometer
         hash: c98aed68189167f0139ff041985b27e407ebddc6
+  - projects:
+      - hash: d930f084ab9efe83f5ad870477178df99284fd22
+        repo: openstack/ceilometer
+    version: 8.1.1
