--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -8,6 +8,10 @@ releases:
       - hash: 04352f339db2eec1382b2f085651200774b56f29
         repo: openstack/ceilometer
     version: 9.0.0
+  - projects:
+      - hash: 11be2c83145fc88bee657e9b14c9e5eca2410d6f
+        repo: openstack/ceilometer
+    version: 9.0.1
 branches:
   - location: 9.0.0
     name: stable/pike
