--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -145,3 +145,7 @@ releases:
     projects:
       - repo: openstack/openstackdocstheme
         hash: 3f2de78fa5d9e9bdc0155ee54214f00541a25d62
+  - version: 1.17.0
+    projects:
+      - repo: openstack/openstackdocstheme
+        hash: 1eaa00b89d301bf3021bdbf6559250bdc07444a7
