--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -91,3 +91,7 @@ releases:
     projects:
       - repo: openstack/pymod2pkg
         hash: 916f4233d018ba04a24fa4d6ad4c261544f9a74a
+  - version: 0.9.0
+    projects:
+      - repo: openstack/pymod2pkg
+        hash: 3e85d9340c7dc5048b59ccf07c7edc9d9dac67b9
