--- a/deliverables/pike/kolla.yaml
+++ b/deliverables/pike/kolla.yaml
@@ -19,3 +19,7 @@ releases:
     projects:
       - repo: openstack/kolla
         hash: 0218697d00e183c069280fe386f498d3dc472868
+  - version: 5.0.0.0rc2
+    projects:
+      - repo: openstack/kolla
+        hash: b229f8ef9ad0799f9823475f0864a9a47ccc7a62
